# recipe_bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  prometheus.yml  pyproject.toml  requirements-dev.txt  requirements.txt
notebooks/: tiktok_description_parse.ipynb
recipebot/: main.py
recipebot/adapters/services/: tt_resolver.py
recipebot/adapters/services/groq_parser/: recipe_parser.py  schemas.py
recipebot/adapters/services/groq_tt_parser/: tt_recipe_parser.py  tt_recipe_prompt.py
recipebot/config/: __init__.py  config.py  enums.py  logging.py
recipebot/config/logging/: __init__.py  filters.py  json_logging.py  logging.py  text_logging.py
recipebot/domain/auth/: group.py  user.py
recipebot/domain/recipe/: recipe.py
recipebot/drivers/: keepalive.py  lifespan.py  main.py  metrics_server.py  middleware.py  state.py
recipebot/drivers/handlers/: __init__.py  basic_fallback.py  main_keyboard.py
recipebot/drivers/handlers/auth/: __init__.py  decorators.py  handlers.py  messages.py
recipebot/drivers/handlers/recipe/: add_recipe_handler.py  handlers.py  list_recipes_handler.py
recipebot/drivers/handlers/recipe_crud/: shared_tag_callbacks.py
recipebot/infra/groq/: client.py  metrics.py
recipebot/infra/transport/: base.py  exceptions.py  httpx_transport.py  schemas.py
recipebot/metrics/: recipes.py
recipebot/ports/repositories/: exceptions.py  recipe_repository.py  recipe_tag_repository.py  user_repository.py
recipebot/tasks/recipe_from_tt/: recipe_from_tt.py
recipebot/tests/: conftest.py  test_config.py  test_recipe_repository.py  utils.py
recipebot/tests/mocks/: mock_bot.py  mock_recipe_repo.py  mock_recipe_tag_repo.py  mock_user_repo.py
(+108 files in other folders)
